--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Home Page</title>
     <meta name="Description"
         content="Just some cool web page">
+    <link href="styles/styleMain.css" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -17,8 +22,8 @@
             title="Mario without a mustache"
             width="20%" height="20%">
     </a>
-    <p><strong>DON'T</strong> click on the image above!</p>
-    <p><em>(really, don't)</em></p>
+    <p class="bold">DON'T click on the image above!</p>
+    <p class="italics">(really, don't)</p>
 
     <br>
 
@@ -30,7 +35,6 @@
                 <li>I'm in ATCS!</li>
                 <li>My favorite subjects are computer science and math!</li>
                 <li>I play the guitar!</li>
-                <li></li>
             </ul>
         <li>Other Random Facts:</li>
             <ul>
