--- a/secondpage.html
+++ b/secondpage.html
@@ -6,11 +6,17 @@
     <meta charset="utf-8">
     <meta name="Description"
         content="Second Page!">
+    <link href="styles/styleSecondPage.css" rel="stylesheet" type="text/css">
+    <link href="styles/styleMain.css" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <h1>Neat! You found the second page!</h1>
-    <p><em>(wasn't that hard but yay positivity)</em></p>
+    <p class="italics">(wasn't that hard but yay positivity)</p>
     <p>What is this page going to be about?</p>
     <p>Ah, well you see-</p>
     <br>
@@ -21,12 +27,12 @@
             title="Cool gif I found"
             width="25%" height="25%">
     </a>
-    <h6>(yes, I am very interested in this song actually)</h6>
+    <h6 class="italics">(yes, I am very interested in this song actually)</h6>
     <p>Rick Astley's "Never Gonna Give You Up" was released on July 27th in 1987.</p>
-    <p>It is considered to be his <strong>signature</strong> song.</p>
+    <p>It is considered to be his signature song.</p>
     <p>Some nice facts about the song:</p>
     <ol>
-        <li>About the song:</li>
+        <li class="big">About the song:</li>
             <ul>
                 <li>Rick Astley won the MTV Europe Music Award for Best Act Ever in 2008 with this song.</li>
                 <li>He recorded and released a pianoforte version of this song in 2019.</li>
@@ -34,9 +40,9 @@
                 <li>It was recorded in October of 1986, at PWL Studios in South London, England.</li>
                 <li>Its baselines were produced using a Yamaha DX7 digital synthesizer.</li>
                 <li>A Linn 9000 was used for the drums and sequencing.</li>
-                <li>The youtube video reached <strong>1 billion</strong> views on July 28th of 2021, 34 years and 1 day after the release of the song.</li>
+                <li>The youtube video reached 1 billion views on July 28th of 2021, 34 years and 1 day after the release of the song.</li>
             </ul>
-        <li>About the meme:</li>
+        <li class="big">About the meme:</li>
             <ul>
                 <li>Its first appearance was in "It's Always Sunny in Philadelphia", which grew the song's popularity on the internet.</li>
                 <li>Then the creator of 4chan created a word filter that changed the word "egg to duck".</li>
@@ -44,7 +50,7 @@
                 <li>People made hyperlinks that you would click on, expecting something different, which led you to the duckroll meme image.</li>
                 <li>The first trailer for Grand Theft Auto IV came out.</li>
                 <li>People made fake hyperlinks to this, which actually sent people to the Never Gonna Give You Up music video.</li>
-                <li>This started <em>rickrolling</em>, and the meme got bigger, even helping the music video get to <strong>1 billion</strong> views!</li>
+                <li class="bold">This started rickrolling, and the meme got bigger, even helping the music video get to 1 billion views!</li>
             </ul>
     </ol>
     <p>By the way, yes, the gif above is in fact a hyperlink to Rick Astley's other popular song, "Together Forever".</p>
@@ -53,7 +59,7 @@
     <a href="https://www.youtube.com/watch?v=QMW4AqbuSGg">
         A video that summarizes the history of rickrolling a bit more indepth!
     </a>
-    <p><em>(don't worry, it's not a rickroll)</em></p>
+    <p>(don't worry, it's not a rickroll)</p>
     <br>
     <a href="index.html">
         Click me to go back to the first page!
